<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/skip"
        android:onClick="skipRegister"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/reg_name"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/black_border"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="8dp"
            android:hint="@string/name"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/black_border"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/email"
            android:padding="8dp" />

        <EditText
            android:id="@+id/reg_pwd"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/black_border"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:padding="8dp" />

        <EditText
            android:id="@+id/pwd_confirm"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/black_border"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="340dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/password_conditions"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register_now"
            android:textSize="18sp" />
    </RelativeLayout>


</RelativeLayout>